--- a/config/styleguide.yml
+++ b/config/styleguide.yml
@@ -1,7 +1,31 @@
-- Base
-- Abstractions
-- Modules
-- Grid
-- Form Patterns
-- Buttons
-- Helpers
+-
+  title: Base
+  description: All default elements e.g. paragraphs, links, headings, images, etc. are given base styles that define how the element should look in all occurrences on the page. Base styles include setting heading sizes, default link styles, default font styles, etc.
+
+-
+  title: Abstractions
+  description: An abstraction is a CSS methodology that basically removes a pattern from a specific idea and makes a more generic idea out of it e.g. make a list render horizontally. They exist to avoid writing the same similar patterns over and over, instead create a single more generic representation of those patterns and reuse that instead.
+
+-
+  title: Modules
+  description: Modules are the discrete components of the page e.g. carousel, tabs, pagination, etc. This is the meat of the page.
+
+-
+  title: Buttons
+  description: All of the different button styles.
+
+-
+  title: Grid
+  description: A responsive grid used for the site structure and for any other layouts. The grid is fluid meaning it can easily resize itself to fit into different screen sizes and adjustments have been made using <a href="http://reference.sitepoint.com/css/mediaqueries" rel="external">CSS3 Media Queries</a> so the grid will fit nicely into smaller screen sizes.
+
+-
+  title: Widgets
+  description: Module widgets are more interactive rich and therefore require JavaScript/jQuery to function.
+
+# -
+#   title: Form Patterns
+#   description: Each form especially complex forms are made up of different form elements e.g. checkboxes, radio inputs, file uploads, etc. and these form elements can have different layouts. The form patterns page shows all the available patterns 'out of the box' including validation.
+
+# -
+#   title: Helpers
+#   description: Helpers are a bunch of classes to apply very common styles to elements and modules e.g. make text right aligned, apply the base bottom margin to an element, etc. They're to be used arbitrarily i.e. only if an element/module doesn't already have a class to which you could apply this styling.
