--- a/spec/fixtures/vcr_cassettes/global_search.yml
+++ b/spec/fixtures/vcr_cassettes/global_search.yml
@@ -19229,4 +19229,61 @@ http_interactions:
       string: '[{"id":828,"centre_id":"bondijunction","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-02-18","opening_time":"09:00","closing_time":"18:00","closed":true}]'
     http_version: 
   recorded_at: Mon, 17 Feb 2014 22:28:44 GMT
+- request:
+    method: get
+    uri: http://trading-hour-service.test.dbg.westfield.com/api/trading-hour/master/centre_trading_hours/range.json?centre_id=bondijunction&from=2014-02-20&to=2014-02-20
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.8
+      Content-Type:
+      - application/json
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-XSS-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      X-UA-Compatible:
+      - chrome=1
+      ETag:
+      - '"1a547e7975a5614010926f47b07e27a3"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 34c31507-1307-4d6b-9b5e-cd4e2b856de6
+      X-Runtime:
+      - '0.010256'
+      Status:
+      - 200 OK
+      Content-Type:
+      - application/json; charset=utf-8
+      Server:
+      - Apache
+      Content-Length:
+      - '194'
+      Date:
+      - Thu, 20 Feb 2014 03:37:29 GMT
+      X-Varnish:
+      - '1685933716'
+      Age:
+      - '0'
+      Via:
+      - 1.1 varnish
+      Connection:
+      - keep-alive
+      X-Cache:
+      - MISS
+    body:
+      encoding: UTF-8
+      string: '[{"id":18,"centre_id":"bondijunction","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-02-20","opening_time":"09:30","closing_time":"21:00","closed":false}]'
+    http_version: 
+  recorded_at: Thu, 20 Feb 2014 03:37:29 GMT
 recorded_with: VCR 2.6.0
