WSF-6322 Additional redirect for FlatLayTheNation

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -267,6 +267,11 @@
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140701
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
   RewriteRule ^/flatlay/?$ http://flatlay.westfield.com.au [R=301,L]
+  
+    # [2014-02-24 gcallister] Add Flatlay The Nation (WSF-6322)
+  RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140701
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/flatlaythenation/?$ http://flatlay.westfield.com.au [R=301,L]
 
   # [2013-12-3 csmith] Redirect incorrect movie urls to the correct one, eg bondijunction/bondijunction/movies/the-butler/279 -> bondijunction/movies/the-butler/279
   RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
