WSF-6300 Add AU unsubscribe redirect V2

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -109,6 +109,10 @@
   RewriteCond %{HTTP:X-Forwarded-Host} ^www\.westfield\.com$
   RewriteRule ^/unsubscribe/?$ https://secure.westfield.com/unsubscribe/ [R=301,L]
   
+  # [2014-02-25 gcallister] Add redirect AU unsubscribe page WSF-6300
+  RewriteCond %{HTTP:X-Forwarded-Host} ^(www\.(uat\.)?westfield\.com\.au|wwwau\.systest\.dbg\.westfield\.com)?$
+  RewriteRule ^/unsubscribe/?$ https://secure.westfield.com/unsubscribe/ [NC,R=301,L]
+  
   # [2013-11-13 gcallister] Add redirects for WA and SA centres retailer pages
   #                         Will only start working once customer console has /au routed to it.
   RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20140101
