Update apache2 configuration to redirect / on beta.westfield.com.au to www.westfield.com.au
The deeper pages have been updated in varnish to canonicalise the centres to their relevant domains.
Only /api/ and assets will still be accesssible on beta.westfield.com.au - which is required until updated
service helper has been pushed into all applications where applicable.

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -30,7 +30,11 @@
   # Sometimes we need to adjust fields with there context, the following values will allow you to lower/upper as required
   RewriteMap lc int:tolower
   RewriteMap uc int:toupper
-  
+
+  # beta.westfield.com.au needs to be redirected to www.westfield.com.au
+  RewriteCond %{HTTP:X-Forwarded-Host} ^beta\.westfield\.com\.au$
+  RewriteRule ^/$ http://www.westfield.com.au/ [R=301,L]
+
   # ================================================================
   # If you wish to use date expiries on redirects (ie; for vanity domains, use the following Conditional)
   # RewriteCond %{TIME_YEAR}%{TIME_MON}%{TIME_DAY} <20130122
